--- a/Facturador/Blazor.Server/appsettings.json
+++ b/Facturador/Blazor.Server/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ConnectionString": "XpoProvider=MSAccess;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Admin.accdb;User Id=admin;Password=icpac;"
+    "ConnectionString": "XpoProvider=MSAccess"
   },
   "Logging": {
     "LogLevel": {
